--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,17 +1,17 @@
 <h1>Update Pet</h1>
 
-<form action="/pets" method="POST">
+<form action="/pets<%=@pet.id%>" method="POST">
   <label>Name:</label>
 
   <br></br>
 
-  <input type="text" id="pet_name" name="pet_name">
+  <input type="text" id="pet[name]" name="pet_name">
 
   <br></br>
   <label>Choose an existing owner:</label>
 
   <%@owners.each do |owner|%>
-    <input type="checkbox" name="owner_id" value="<%=owner.id%>" id="<%=owner.id%>"><%=owner.name%></input>
+    <input type="checkbox" name="pet[owner_id]" value="<%=owner.id%>" id="<%=owner.id%>"><%=owner.name%></input>
   <%end%>
 
   <br></br>
@@ -19,7 +19,7 @@
   <label>and/or, create a new owner:</label>
     <br></br>
     <label>name:</label>
-      <input  type="text" id="owner_name"></input>
+      <input  type="text" id=owner[name] name="owner_name"></input>
     <br></br>
 
   <input type="submit" value="Create Pet">
