--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -5,13 +5,13 @@
 
   <br></br>
 
-  <input type="text" id="pet_name" name="pet_name">
+  <input type="text" id="pet[name]" name="pet_name">
 
   <br></br>
   <label>Choose an existing owner:</label>
 
   <%@owners.each do |owner|%>
-    <input type="checkbox" name="owner_id" value="<%=owner.id%>" id="<%=owner.id%>"><%=owner.name%></input>
+    <input type="checkbox" name="pet[owner_id]" value="<%=owner.id%>" id="<%=owner.id%>"><%=owner.name%></input>
 <%end%>
 
   <br></br>
@@ -19,7 +19,7 @@
   <label>and/or, create a new owner:</label>
     <br></br>
     <label>name:</label>
-      <input  type="text" id="owner_name"></input>
+      <input  type="text" id=owner[name] name="owner_name"></input>
     <br></br>
 
   <input type="submit" value="Create Pet">
