automatically backed up by learn

--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -11,7 +11,7 @@
   <label>Choose an existing owner:</label>
 
   <%@Owner.all.each do |owner|%>
-    <input type="checkbox" name="pet[owner_id]" value="<%=owner.id%>" id="<%=owner.id%>"><%=owner.name%></input>
+    <input type="checkbox" name="pet[owner_id]" value="<%=owner.id%>" id="<%=owner.id%>"> <%='checked' if @owner.id.include?(@pet["owner_id"]) %>><%=owner.name%></input>
   <%end%>
 
   <br></br>
